--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Create env.js from secret
+      - name: Create env.js
         run: |
           echo "window.SPOTIFY_CLIENT_ID='${{ secrets.SPOTIFY_CLIENT_ID }}'" > env.js
 
@@ -21,4 +21,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./
+          publish_dir: ./         
+          publish_branch: gh-pages 
+          force_orphan: true      
